# Task-Manager-and-Real-Time-Chat-System

./: BUILD.md  CMakeLists.txt  FEATURE_TEST_RESULTS.md  FINAL_STATUS.md  Makefile  README.md  USAGE.md  build_api_server.sh  client  demo.cpp  server  server_api  test_dashboard.sh  test_enhanced_features.sh  test_enhancements.sh  test_system.sh  verify_fix.sh
data/: chatlog.txt  tasks.db
docs/: FINAL_STATUS.md
frontend/: index.html  package-lock.json  package.json
frontend/electron/: main.js
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: Chat.css  Chat.jsx  CreateTask.css  CreateTask.jsx  Dashboard.css  Dashboard.jsx  Login.css  Login.jsx  PrivateChat.css  PrivateChat.jsx  StatCard.css  StatCard.jsx  TaskDetail.css  TaskDetail.jsx  TaskList.css  TaskList.jsx
include/: Chat.hpp  ChatManager.hpp  HTTPServer.hpp  NetworkUtils.hpp  SocketAbstraction.hpp  Task.hpp  TaskManager.hpp  User.hpp
src/: Chat.cpp  ChatManager.cpp  HTTPServer.cpp  HTTPServer.cpp.backup_20260128_204042  NetworkUtils.cpp  SocketAbstraction.cpp  Task.cpp  TaskManager.cpp  User.cpp  client.cpp  server.cpp  server_functions.cpp  server_with_api.cpp
